MDEV-12672 Replicated TIMESTAMP fields given wrong value near DST change

Implement a special Copy_field method for timestamps, that copies
timestamps without converting them to MYSQL_TIME (the conversion
is lossy around DST change dates).